fix: invisible clickable point

--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,6 @@ body {
   pointer-events: none;
 }
 
-.hidden {
-  pointer-events: none;
-  opacity: 0;
-}
-
 .world {
   box-shadow: 0 0 1vmin #00000050, 0 0 0.5vmin #00000050 inset;
   border-radius: min(1vmin, 5px);
@@ -48,12 +43,17 @@ body {
 }
 
 .buttons {
+  pointer-events: all;
   transition: opacity 300ms ease;
+}
+
+.buttons.hidden {
+  pointer-events: none;
+  opacity: 0;
 }
 
 .buttons .bg,
 .buttons .frame {
-  pointer-events: all;
   width: 160px;
   height: 40px;
   rx: 5px;
